[workspace]
resolver = "2"
members = [
    "core",
    "examples/memory-catalog",
    "examples/rest-catalog",
    "integration-tests",
]

[workspace.dependencies]
# Async runtime and utilities
async-stream = "0.3.5"
async-trait = "0.1.89"

# Data processing and storage
ctor = "0.2.8"
datafusion = "50"

# Local workspace members
futures = "0.3.17"
iceberg = { git = "https://github.com/vovacf201/iceberg-rust.git", rev = "ad09004c765f198510f9937e671fde6a3d5c92f3", features = [
    "storage-s3",
    "storage-gcs",
    "storage-azblob",
    "storage-azdls",
] }
iceberg-catalog-glue = { git = "https://github.com/vovacf201/iceberg-rust.git", rev = "ad09004c765f198510f9937e671fde6a3d5c92f3" }
iceberg-catalog-memory = { git = "https://github.com/vovacf201/iceberg-rust.git", rev = "ad09004c765f198510f9937e671fde6a3d5c92f3" }
iceberg-catalog-rest = { git = "https://github.com/vovacf201/iceberg-rust.git", rev = "ad09004c765f198510f9937e671fde6a3d5c92f3" }
iceberg-compaction-core = { path = "./core" }
iceberg-datafusion = { git = "https://github.com/vovacf201/iceberg-rust.git", rev = "ad09004c765f198510f9937e671fde6a3d5c92f3" }

parquet = { version = "56.2", features = ["async"] }
port_scanner = "0.1.5"
rand = "0.9.0"

# Utilities
tempfile = "3.8"

# Error handling
thiserror = "2.0.11"
tokio = { version = "1", default-features = false }
tracing = "0.1"
url = "2"
uuid = "1.0"

[workspace.lints.clippy]
uninlined_format_args = "allow"
dbg_macro = "warn"
disallowed_methods = "warn"
disallowed_types = "warn"
doc_markdown = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
inconsistent_struct_constructor = "warn"
unused_async = "warn"
map_flatten = "warn"
await_holding_lock = "warn"
# For private code, this is a little pedantic and not worth fixing.
# &Vec or &String is acceptable
ptr_arg = "allow"
# a little pedantic
get_first = "allow"
new_without_default = "allow"
# TODO: remove later https://github.com/rust-lang/rust-clippy/issues/12537
# duplicated_attributes = "allow"
# TODO: remove later https://github.com/rust-lang/rust-clippy/issues/12436
mixed_attributes_style = "allow"
too_long_first_doc_paragraph = "allow"
str_to_string = "warn"
string_to_string = "warn"

# TODO: this makes sense, but it's too noisy for now (2025-03-10)
large_enum_variant = "allow"
# TODO: this makes sense, but it's too noisy for now (2025-03-10)
result_large_err = "allow"
